[gd_scene load_steps=109 format=3 uid="uid://df2vspltv3d5u"]

[ext_resource type="Script" uid="uid://d2tsv5skjn3fu" path="res://scripts/player.gd" id="1_v6fml"]
[ext_resource type="Texture2D" uid="uid://dsivcgnc332o7" path="res://assets/Lila/Lila-Dash.png" id="2_6eyey"]
[ext_resource type="Texture2D" uid="uid://b364jsp4mvxja" path="res://assets/Lila/Lila-Crouch-Attack.png" id="2_d3wef"]
[ext_resource type="Texture2D" uid="uid://bh7g0h8b8n6r0" path="res://assets/Lila/Lila-Jump.png" id="2_mdl7e"]
[ext_resource type="Texture2D" uid="uid://b0orsr6kdbjwt" path="res://assets/Lila/Lila-Idle.png" id="4_d3wef"]
[ext_resource type="Texture2D" uid="uid://dm58tv0aha8dh" path="res://assets/Lila/Lila-Downward-Swing.png" id="4_o4126"]
[ext_resource type="Texture2D" uid="uid://7djm2vrfcoyq" path="res://assets/Lila/Lila-Walk-Cycle.png" id="5_o4126"]
[ext_resource type="Texture2D" uid="uid://bsgi6l4tflt5j" path="res://assets/Lila/Lila-Forward-Swing.png" id="6_6eyey"]
[ext_resource type="Texture2D" uid="uid://dlwpvcumry7lg" path="res://assets/Lila/Lila-Upward-Swing.png" id="7_bruh7"]
[ext_resource type="Script" uid="uid://c6tscfdrl3ojq" path="res://scripts/grapple_controller.gd" id="7_cw2d6"]
[ext_resource type="Texture2D" uid="uid://dselx3mc6e6d7" path="res://assets/Lila/Lila-Crouch.png" id="7_lkdrv"]
[ext_resource type="Script" uid="uid://ixgave8akowv" path="res://scripts/grapple_ray.gd" id="8_khinc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o4126"]
atlas = ExtResource("2_d3wef")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkdrv"]
atlas = ExtResource("2_d3wef")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oanc2"]
atlas = ExtResource("2_d3wef")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_41lfj"]
atlas = ExtResource("2_d3wef")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nh4m"]
atlas = ExtResource("2_d3wef")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hk6f"]
atlas = ExtResource("2_d3wef")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmxrx"]
atlas = ExtResource("2_d3wef")
region = Rect2(480, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvw7q"]
atlas = ExtResource("2_d3wef")
region = Rect2(560, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0eor"]
atlas = ExtResource("2_d3wef")
region = Rect2(640, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrwhh"]
atlas = ExtResource("2_d3wef")
region = Rect2(720, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7djh"]
atlas = ExtResource("2_d3wef")
region = Rect2(800, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7iby"]
atlas = ExtResource("2_6eyey")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rnld"]
atlas = ExtResource("2_6eyey")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_srp4u"]
atlas = ExtResource("2_6eyey")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfpux"]
atlas = ExtResource("2_6eyey")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_61ith"]
atlas = ExtResource("2_6eyey")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebwui"]
atlas = ExtResource("2_6eyey")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfy4j"]
atlas = ExtResource("2_6eyey")
region = Rect2(480, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wx1s8"]
atlas = ExtResource("4_o4126")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_im07a"]
atlas = ExtResource("4_o4126")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsbg5"]
atlas = ExtResource("4_o4126")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uobdy"]
atlas = ExtResource("4_o4126")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iv1vf"]
atlas = ExtResource("4_o4126")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2viqe"]
atlas = ExtResource("4_o4126")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjt17"]
atlas = ExtResource("4_o4126")
region = Rect2(480, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_27epi"]
atlas = ExtResource("4_o4126")
region = Rect2(560, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_84ti5"]
atlas = ExtResource("4_o4126")
region = Rect2(640, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_afj6a"]
atlas = ExtResource("4_o4126")
region = Rect2(720, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cji5y"]
atlas = ExtResource("4_o4126")
region = Rect2(800, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_blnfk"]
atlas = ExtResource("4_o4126")
region = Rect2(880, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qabq5"]
atlas = ExtResource("4_o4126")
region = Rect2(960, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqny8"]
atlas = ExtResource("4_o4126")
region = Rect2(1040, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgg3w"]
atlas = ExtResource("4_o4126")
region = Rect2(1120, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv3ic"]
atlas = ExtResource("2_mdl7e")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8lor"]
atlas = ExtResource("4_d3wef")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e537"]
atlas = ExtResource("4_d3wef")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p07f3"]
atlas = ExtResource("4_d3wef")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_viqgg"]
atlas = ExtResource("4_d3wef")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgkxt"]
atlas = ExtResource("4_d3wef")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsi7p"]
atlas = ExtResource("4_d3wef")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jpwa"]
atlas = ExtResource("2_mdl7e")
region = Rect2(0, 0, 80, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpppk"]
atlas = ExtResource("2_mdl7e")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfeki"]
atlas = ExtResource("5_o4126")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_axnmu"]
atlas = ExtResource("5_o4126")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvsjc"]
atlas = ExtResource("5_o4126")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxdpb"]
atlas = ExtResource("5_o4126")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_agngo"]
atlas = ExtResource("5_o4126")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrixf"]
atlas = ExtResource("5_o4126")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmt83"]
atlas = ExtResource("5_o4126")
region = Rect2(480, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4as6"]
atlas = ExtResource("5_o4126")
region = Rect2(560, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1r6t"]
atlas = ExtResource("5_o4126")
region = Rect2(640, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0asu"]
atlas = ExtResource("5_o4126")
region = Rect2(720, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq1a3"]
atlas = ExtResource("5_o4126")
region = Rect2(800, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu4mg"]
atlas = ExtResource("5_o4126")
region = Rect2(880, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk6la"]
atlas = ExtResource("6_6eyey")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrxk4"]
atlas = ExtResource("6_6eyey")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eg1p0"]
atlas = ExtResource("6_6eyey")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2u8p"]
atlas = ExtResource("6_6eyey")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qv10x"]
atlas = ExtResource("6_6eyey")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdxpi"]
atlas = ExtResource("6_6eyey")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7b437"]
atlas = ExtResource("6_6eyey")
region = Rect2(480, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nyu3"]
atlas = ExtResource("6_6eyey")
region = Rect2(560, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_priom"]
atlas = ExtResource("6_6eyey")
region = Rect2(640, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lt3gi"]
atlas = ExtResource("6_6eyey")
region = Rect2(720, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_akpgi"]
atlas = ExtResource("6_6eyey")
region = Rect2(800, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kumhx"]
atlas = ExtResource("7_lkdrv")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_100hb"]
atlas = ExtResource("7_lkdrv")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7odld"]
atlas = ExtResource("7_lkdrv")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm57i"]
atlas = ExtResource("7_lkdrv")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_axtmv"]
atlas = ExtResource("7_lkdrv")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6x32p"]
atlas = ExtResource("7_lkdrv")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pusvq"]
atlas = ExtResource("7_lkdrv")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qduiv"]
atlas = ExtResource("7_bruh7")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yj0e"]
atlas = ExtResource("7_bruh7")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0jld"]
atlas = ExtResource("7_bruh7")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdclj"]
atlas = ExtResource("7_bruh7")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ml80s"]
atlas = ExtResource("7_bruh7")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdgyb"]
atlas = ExtResource("7_bruh7")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvyme"]
atlas = ExtResource("7_bruh7")
region = Rect2(480, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_swrsk"]
atlas = ExtResource("7_bruh7")
region = Rect2(560, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkfac"]
atlas = ExtResource("7_bruh7")
region = Rect2(640, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_unhkg"]
atlas = ExtResource("7_bruh7")
region = Rect2(720, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kajp"]
atlas = ExtResource("7_bruh7")
region = Rect2(800, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ku51j"]
atlas = ExtResource("7_bruh7")
region = Rect2(880, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_la8f2"]
atlas = ExtResource("7_bruh7")
region = Rect2(960, 0, 80, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_nckey"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4126")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkdrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oanc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41lfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nh4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hk6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmxrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvw7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0eor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrwhh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7djh")
}],
"loop": false,
"name": &"crouchAttack",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7iby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rnld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srp4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfpux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61ith")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebwui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfy4j")
}],
"loop": true,
"name": &"dash",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wx1s8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_im07a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsbg5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uobdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iv1vf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2viqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjt17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27epi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84ti5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afj6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cji5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blnfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qabq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqny8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgg3w")
}],
"loop": false,
"name": &"downAttack",
"speed": 60.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv3ic")
}],
"loop": true,
"name": &"falling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8lor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e537")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p07f3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_viqgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgkxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsi7p")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jpwa")
}],
"loop": false,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpppk")
}],
"loop": true,
"name": &"rising",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfeki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axnmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvsjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxdpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agngo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrixf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmt83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4as6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1r6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0asu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq1a3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu4mg")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk6la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrxk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eg1p0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2u8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qv10x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdxpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7b437")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nyu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_priom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lt3gi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akpgi")
}],
"loop": true,
"name": &"sideAttack",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kumhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_100hb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7odld")
}],
"loop": false,
"name": &"squish",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm57i")
}],
"loop": true,
"name": &"squishing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_axtmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6x32p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pusvq")
}],
"loop": true,
"name": &"unsquish",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qduiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yj0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0jld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdclj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ml80s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdgyb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvyme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swrsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkfac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unhkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kajp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ku51j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_la8f2")
}],
"loop": false,
"name": &"upAttack",
"speed": 30.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d3wef"]
radius = 6.0
height = 28.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6eyey"]
radius = 11.0
height = 36.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bruh7"]
radius = 6.0
height = 17.8696

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_o4126"]
radius = 9.99969
height = 38.8114

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lkdrv"]
radius = 6.0
height = 32.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p7iby"]
radius = 5.09023
height = 16.9495

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0rnld"]
radius = 6.70722
height = 22.3574

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_srp4u"]
radius = 6.63798
height = 33.1636

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jfpux"]
radius = 7.0
height = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yi2kj"]
radius = 5.0
height = 20.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 12
collision_mask = 12
script = ExtResource("1_v6fml")
maxJumps = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -15)
sprite_frames = SubResource("SpriteFrames_nckey")
animation = &"dash"
autoplay = "idle"

[node name="AttackHitbox" type="Area2D" parent="AnimatedSprite2D"]

[node name="upHitbox1" type="CollisionShape2D" parent="AnimatedSprite2D/AttackHitbox"]
auto_translate_mode = 1
position = Vector2(16, 5)
rotation = 0.347321
shape = SubResource("CapsuleShape2D_d3wef")
disabled = true
debug_color = Color(1, 1, 1, 0.42)

[node name="upHitbox2" type="CollisionShape2D" parent="AnimatedSprite2D/AttackHitbox"]
position = Vector2(4, -13)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_6eyey")
disabled = true

[node name="upHitbox3" type="CollisionShape2D" parent="AnimatedSprite2D/AttackHitbox"]
position = Vector2(-10, 2)
rotation = -0.120428
shape = SubResource("CapsuleShape2D_bruh7")
disabled = true

[node name="sideHitbox1" type="CollisionShape2D" parent="AnimatedSprite2D/AttackHitbox"]
position = Vector2(22, 6)
rotation = 0.935165
shape = SubResource("CapsuleShape2D_o4126")
disabled = true

[node name="crouchHitbox1" type="CollisionShape2D" parent="AnimatedSprite2D/AttackHitbox"]
position = Vector2(20, 8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_lkdrv")
disabled = true

[node name="downHitbox1" type="CollisionShape2D" parent="AnimatedSprite2D/AttackHitbox"]
position = Vector2(-13, 9)
rotation = -0.256131
shape = SubResource("CapsuleShape2D_p7iby")
disabled = true

[node name="downHitbox2" type="CollisionShape2D" parent="AnimatedSprite2D/AttackHitbox"]
position = Vector2(-4, 23)
rotation = 2.05159
shape = SubResource("CapsuleShape2D_0rnld")
disabled = true

[node name="downHitbox3" type="CollisionShape2D" parent="AnimatedSprite2D/AttackHitbox"]
position = Vector2(20, 22)
rotation = 0.913448
shape = SubResource("CapsuleShape2D_srp4u")
disabled = true

[node name="downHitbox4" type="CollisionShape2D" parent="AnimatedSprite2D/AttackHitbox"]
position = Vector2(27, 4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_jfpux")
disabled = true

[node name="NormalCollider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1, -11)
shape = SubResource("CapsuleShape2D_yi2kj")

[node name="DashCool" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="grapple_controller" type="Node2D" parent="."]
position = Vector2(1, -17)
script = ExtResource("7_cw2d6")

[node name="Line2D" type="Line2D" parent="grapple_controller"]
visible = false
points = PackedVector2Array(0, 0, 0, 0)
width = 1.0

[node name="GrappleRay" type="RayCast2D" parent="grapple_controller"]
visible = false
target_position = Vector2(200, 0)
collision_mask = 3
script = ExtResource("8_khinc")

[node name="stopMomentum" type="Timer" parent="grapple_controller"]
wait_time = 0.1
one_shot = true
